--- a/stella_school/src/templates/documents.html
+++ b/stella_school/src/templates/documents.html
@@ -19,68 +19,69 @@
       <tr>
         <th scope="row">1</th>
         <td>Academic Calender</td>
-        <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/Annual Academic Calender.pdf' %}" download="">Click Here</a></td>
-       
+        <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/calender.png' %}">View</a>
+         
+            
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>New Student School Fee</td>
-        <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/New Student School Fee.pdf' %}" download="">Click Here</a></td>
+        <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/fee.png' %}" >View</a></td>
        
       </tr>
     
         <tr>
           <th scope="row">3</th>
           <td>NOC</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/NOC.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/noc.png' %}" >View</a></td>
          
         </tr>
         <tr>
           <th scope="row">4</th>
           <td>RTE</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/RTE act 2009.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/rte.png' %}" >View</a></td>
          
         </tr>
         <tr>
           <th scope="row">5</th>
           <td>Water Sanitation Certificate</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/water sanitation certificate.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/water.png' %}" >View</a></td>
          
         </tr>
         <tr>
           <th scope="row">6</th>
           <td>PTA</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/PTA.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/pta.png' %}" >View</a></td>
          
         </tr>
         <tr>
           <th scope="row">7</th>
           <td>School Managing Commitee</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/SMC.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/smc.png' %}" >View</a></td>
          
         </tr>
         <tr>
           <th scope="row">8</th>
           <td>Society Registration Certificate</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/Society registration certificate.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/Society registration certificate.png' %}" >View</a></td>
          
         </tr>
         <tr>
           <th scope="row">9</th>
           <td>Building Safety</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/Building Safety.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/Building Safety.png' %}" >View</a></td>
          
         </tr>
         <tr>
           <th scope="row">10</th>
           <td>Fire Safety</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/Fire Safety.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/Fire Safety.png' %}" >View</a></td>
          
         </tr>
         <tr>
           <th scope="row">11</th>
           <td>DEO Certificate</td>
-          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'media/DEO Certificate.pdf' %}" download="">Click Here</a></td>
+          <td><img src="{% static 'images/pdf.jpg' %}"  width="30" height="30"><a href="{% static 'images/DEO Certificate.png' %}" >View</a></td>
          
         </tr>
     </tbody>
