--- a/stella_school/src/templates/building_safety.html
+++ b/stella_school/src/templates/building_safety.html
@@ -9,7 +9,7 @@
           <div class="row">
 
 
-            <embed src="{% static 'media/Building Safety.pdf' %}" type="application/pdf" style="width: 100%;height: 700px;border: none;"  />
+            <embed src="{% static 'media/Building Safety Certificate.pdf' %}" type="application/pdf" style="width: 100%;height: 700px;border: none;"  />
 
 
           </div><br><br><br><br><br>
